Bug 483017 - "open wallpaper image" in right-click menu does not work when wallpaper is set to image of the day
Summary: "open wallpaper image" in right-click menu does not work when wallpaper is se...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-09 19:09 UTC by ekm507
Modified: 2024-04-04 21:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.4
Sentry Crash Report:


Attachments
showing Error and the actual file (83.61 KB, image/png)
2024-03-09 19:09 UTC, ekm507
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ekm507 2024-03-09 19:09:35 UTC
Created attachment 166816 [details]
showing Error and the actual file

I have set wallpaper to bing image of the day.
when I click "Open Wallpaper Image" on desktop menu, I get an Error saying could not find the file.

filename in the `~/.cache/plasma_engine_potd/` is `bing:1920:1080` while plasma looks for a file named `bing` in that directory.


STEPS TO REPRODUCE
1. set wallpaper image to bing image of the day
2. right click on desktop and click "Open Wallpaper Image" in the menu

OBSERVED RESULT
it gives and Error saying could not find the file.

EXPECTED RESULT
wallpaper image should open.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: EndeavourOS
(available in About System)
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Graphics platform: walyand
Comment 1 David Redondo 2024-04-04 06:49:47 UTC
Git commit 1e09e084a8c8df25c3b1fbe2ace533d19c935d7c by David Redondo.
Committed on 03/04/2024 at 12:32.
Pushed by davidre into branch 'master'.

Also check file existing if the url is a file one

Opens  urls to local files with colons in their names correctly

M  +5    -0    kioclient/urlinfo.h

https://invent.kde.org/plasma/kde-cli-tools/-/commit/1e09e084a8c8df25c3b1fbe2ace533d19c935d7c
Comment 2 David Redondo 2024-04-04 06:51:35 UTC
Git commit 0e26bd2e5669cb5a5d9a3949fec25beb75c2bb1e by David Redondo.
Committed on 04/04/2024 at 06:50.
Pushed by davidre into branch 'Plasma/6.0'.

Also check file existing if the url is a file one

Opens  urls to local files with colons in their names correctly


(cherry picked from commit 1e09e084a8c8df25c3b1fbe2ace533d19c935d7c)

M  +5    -0    kioclient/urlinfo.h

https://invent.kde.org/plasma/kde-cli-tools/-/commit/0e26bd2e5669cb5a5d9a3949fec25beb75c2bb1e