Also check file existing if the url is a file one

Opens  urls to local files with colons in their names correctly
BUG: 483017


(cherry picked from commit 1e09e084a8c8df25c3b1fbe2ace533d19c935d7c)